2012-06-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora_minimal.css
	 operation/extensions.php
	 operation/menu.php
	 general/header.php
	 godmode/extensions.php: Hide not valid sections with metaconsole 
	 activated.
	 
	 Merged from branches.

2012-06-07 Dario Rodriguez <dario.rodriguez@artica.es>

        * include/functions_os.php: Created this file.
        include/functions_groups,
        operation/tree.php: Fixed a bug related to search
        improved performance of OS tab for tree view.

	MERGED FROM 4.0.2

2012-06-07  Hirofumi Kosaka  <kosaka@rworks.jp>

	* include/functions_ui.php: Merged from 4.0.x: Fixed bug:
	string truncation did not always work for multi-byte
	characters.

2012-06-07 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php,
	include/functions_groups.php: Fixed some errors and 
	improved performance of group tree view.

	MERGED FROM 4.0.2

2012-06-06 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/ver_agente.php
	 pandora_console/godmode/alerts/alert_list.builder.php: Fixed alert
	 creation when metaconsole is activated.
	 
	 Merged from branches.

2012-06-06  Vanessa Gil <vanessa.gil@artica.es>

	* operation/agentes/exportdata.php: Fixed bug:
	If the data type of module is string, don't export the data in format: table, Excel or CSV.

2012-06-06  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_modules.php: Fixed bug: When you
	copy a policy module, still liked to policy.

2012-06-06  Vanessa Gil <vanessa.gil@artica.es>

	* operation/agentes/exportdata.php
	  operation/agentes/exportdata.csv.php
	  operation/agentes/exportdata.excel.php: Fixed bug export
	data: If you choose first the type of export, the chosen 
	agent modules are not loaded into the page.

2012-06-06  Hirofumi Kosaka  <kosaka@rworks.jp>

	* godmode/agentes/planned_downtime.php: fixed that 'Affect'
	column at 'planned downtime' may show bad values. cleaned
	source code style.
